<resources>
    <string name="rc_am_my_health_goto_evaluation">开始测评</string>
    <string name="rc_am_add_attention_know">知道了</string>
    <string name="rc_am_my_health_evaluation_serve">家庭医生服务</string>
    <string name="rc_am_my_health_evaluation_serve_text">7x24小时,随时响应</string>
    <string name="rc_am_fd_consult_server_now">立即咨询</string>
    <string name="rc_am_remeasure">重新测量</string>
    <string name="rc_am_work">工作</string>
    <string name="rc_am_freelance_work">自由职业</string>
    <string name="rc_am_nine_to_five">朝九晚五</string>
    <string name="rc_am_have">有</string>
    <string name="rc_am_dont_have">没有</string>
    <string name="rc_am_high_blood_pressure">高血压</string>
    <string name="rc_am_diabetes_mellitus">糖尿病</string>
    <string name="rc_am_go_on">继续</string>

</resources>
