<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rc_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_user_work_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/rc_am_work"
                android:textColor="#333333"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@+id/activity_user_work_name"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activity_user_work_freelance"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:checked="true"
                    android:text="@string/rc_am_freelance_work"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />

                <RadioButton
                    android:id="@+id/activity_user_work_nine_to_five"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="14dp"
                    android:button="@null"
                    android:checked="false"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:text="@string/rc_am_nine_to_five"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="52dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_user_high_blood_pressure_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/rc_am_high_blood_pressure"
                android:textColor="#333333"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@+id/activity_user_high_blood_pressure_name"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activity_user_high_blood_pressure_donthave"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rc_am_dont_have"
                    android:checked="true"
                    android:textSize="14dp"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />

                <RadioButton
                    android:id="@+id/activity_user_high_blood_pressure_have"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="14dp"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:checked="false"
                    android:text="@string/rc_am_have"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="52dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_user_diabetes_mellitus_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/rc_am_diabetes_mellitus"
                android:textColor="#333333"
                android:textSize="14dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@+id/activity_user_diabetes_mellitus_name"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activity_user_diabetes_mellitus_donthave"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:button="@null"
                    android:checked="true"
                    android:textSize="14dp"
                    android:gravity="center"
                    android:text="@string/rc_am_dont_have"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />

                <RadioButton
                    android:id="@+id/activity_user_diabetes_mellitus_have"
                    android:layout_width="114dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="14dp"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:checked="false"
                    android:text="@string/rc_am_have"
                    android:textColor="@drawable/rc_am_choose_text_666_fff" />
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_user_work_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="?attr/RCDarkColor"
        android:gravity="center"
        android:text="@string/rc_am_go_on"
        android:textColor="@color/rc_white" />
</RelativeLayout>