<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="30dp">

                <TextView
                    android:id="@+id/activity_evaluation_result_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:textColor="@color/rc_text_color"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/activity_evaluation_result_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/rc_text_color"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/activity_weight_entering_commit"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="19dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/rc_am_remeasure"
                    android:textSize="16dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/activity_evaluation_result_get_doctor"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/activity_evaluation_result_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:src="@mipmap/ic_serve_family_doctor" />

                <TextView
                    android:id="@+id/activity_evaluation_result_fuwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/activity_evaluation_result_icon"
                    android:text="@string/rc_am_my_health_evaluation_serve"
                    android:textColor="@color/rc_text_color"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_evaluation_result_fuwu"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/activity_evaluation_result_icon"
                    android:singleLine="true"
                    android:text="@string/rc_am_my_health_evaluation_serve_text"
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="87dp"
                    android:layout_height="39dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@mipmap/btn_evaluation_result_get"
                    android:gravity="center"
                    android:text="@string/rc_am_fd_consult_server_now"
                    android:textColor="@android:color/white"
                    android:textSize="13dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>